--- a/less/carousel.less
+++ b/less/carousel.less
@@ -16,7 +16,7 @@
   > .item {
     display: none;
     position: relative;
-    .transition(.6s ease-in-out left);
+    .transition(2s ease-in-out);
 
     // Account for jankitude on images
     > img,
@@ -27,25 +27,25 @@
 
     // WebKit CSS3 transforms for supported devices
     @media all and (transform-3d), (-webkit-transform-3d) {
-      .transition-transform(~'0.6s ease-in-out');
+      .transition-transform(~'2s ease-in-out');
       .backface-visibility(~'hidden');
       .perspective(1000);
 
       &.next,
       &.active.right {
-        .translate3d(100%, 0, 0);
+        .translate3d(0, 0, 0);
         left: 0;
       }
       &.prev,
       &.active.left {
-        .translate3d(-100%, 0, 0);
+        .translate3d(0, 0, 0);
         left: 0;
       }
       &.next.left,
       &.prev.right,
       &.active {
         .translate3d(0, 0, 0);
-        left: 0;
+        opacity: 1;
       }
     }
   }
